tests/snapshots/files__nested_call-peg.snap
---
source: tests/files.rs
expression: visualization.result
---
digraph G {
subgraph {
node [ordering=out];
v0 [label="int"];
v1 [label="int"];
v2 [label="arg 0"];
v3 [label="inc"];
v4 [label="arg 0"];
v5 [label="inc"];
v6 [label="PRINT"];
v7 [label="double"];
v8 [label="double"];
v9 [label="PRINT"];
v3 -> v1;
v3 -> v2;
v5 -> v1;
v5 -> v4;
v6 -> v3;
v6 -> v5;
v7 -> v0;
v7 -> v6;
v8 -> v0;
v8 -> v6;
v9 -> v7;
v9 -> v8;
}
subgraph {
node [ordering=out];
v0 [label="int"];
v1 [label="arg 0"];
v2 [label="add"];
v3 [label="arg 1"];
v4 [label="double"];
v5 [label="arg 1"];
v6 [label="double"];
v2 -> v0;
v2 -> v1;
v4 -> v2;
v4 -> v3;
v6 -> v2;
v6 -> v5;
}
subgraph {
node [ordering=out];
v0 [label="int"];
v1 [label="arg 0"];
v2 [label="mul"];
v3 [label="arg 1"];
v2 -> v0;
v2 -> v1;
}
}

