tests/snapshots/files__nested_call-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
double {
two: int = const 2;
res: int = mul two x;
return res
}

inc {
one: int = const 1;
x: int = add one x;
x: int = call @double x;
return x
}

main {
a: int = const 0;
b: int = call @inc a;
print b;
c: int = const 1;
c: int = call @double c;
print c;
return
}
