tests/snapshots/files__odd_control_flow-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v1: int = const 6;
  print v1;
}
