tests/snapshots/files__peel_twice-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
  c0_: int = const 1;
  c1_: int = const 2;
  v2_: int = id c0_;
  v3_: int = id c1_;
  v4_: int = id c0_;
.b5_:
  v6_: int = add v2_ v4_;
  v7_: bool = lt v6_ v3_;
  v2_: int = id v6_;
  v8_: int = id v3_;
  v9_: int = id v4_;
  v3_: int = id v8_;
  v4_: int = id v9_;
  br v7_ .b5_ .b10_;
.b10_:
  print v2_;
  ret;
}
