tests/snapshots/files__peel_twice_precalc_pred-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
  c0_: int = const 1;
  v1_: int = id c0_;
  v2_: int = id c0_;
.b3_:
  v4_: int = add v1_ v2_;
  v5_: bool = lt v1_ v2_;
  v1_: int = id v4_;
  v6_: int = id v2_;
  v2_: int = id v6_;
  br v5_ .b3_ .b7_;
.b7_:
  print v1_;
  ret;
}
